...
          tabBarPosition: isTabletLandscape ? "left" : "bottom",
          animation: "fade",
        }}
        initialRouteName="index"
      >
        <Tabs.Screen name="index" options={{ title: "Inicio" }} />
        <Tabs.Screen name="history/index" options={{ title: "Historial" }} />
        <Tabs.Screen name="sync-status" options={{ title: "Sync" }} />

        {/* Rutas navegables pero NO en tab bar */}
        <Tabs.Screen
          name="start-session"
          options={{
...
